--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Tsuretsuryu\\Desktop\\Python_Stack\\my_environments\\djangoPy3Env\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\Tsuretsuryu\\Desktop\\Python_Stack\\my_environments\\djangoPy3Env\\Scripts\\python.exe"
 }
