--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.14.0",
     "react-scripts": "^3.4.4"
   },
+  //npm i cors axios
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
